<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/noteNameEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/note_name_hint" />

    <EditText
        android:id="@+id/noteContentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_content_hint"
        android:inputType="textMultiLine"
        android:lines="5" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button" />
</LinearLayout>
